Add check duplicate

--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "32ddbbab",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.3\n",
       "[notice] To update, run: C:\\Users\\HP\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     },
@@ -76,7 +76,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.3\n",
       "[notice] To update, run: C:\\Users\\HP\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     },
@@ -93,7 +93,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.3\n",
       "[notice] To update, run: C:\\Users\\HP\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     },
@@ -124,7 +124,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.3\n",
       "[notice] To update, run: C:\\Users\\HP\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     },
@@ -151,7 +151,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.3\n",
       "[notice] To update, run: C:\\Users\\HP\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     },
@@ -168,7 +168,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.3\n",
       "[notice] To update, run: C:\\Users\\HP\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     },
@@ -187,7 +187,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.3\n",
       "[notice] To update, run: C:\\Users\\HP\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     },
@@ -205,7 +205,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.3\n",
       "[notice] To update, run: C:\\Users\\HP\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     },
@@ -226,7 +226,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.3\n",
       "[notice] To update, run: C:\\Users\\HP\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "85874c2d",
    "metadata": {},
    "outputs": [],
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "603f7fe3",
    "metadata": {},
    "outputs": [
@@ -334,13 +334,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"global_air_pollution_data.csv\")  #use pandas to read file csv and change to \"df\"\n",
+    "df = pd.read_csv(\"../data/global_air_pollution_data.csv\")  #use pandas to read file csv and change to \"df\"\n",
     "print(df)                                          #print data \"df\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "395cf6a5",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c5bb1707",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b373fe65",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
        "4              0             Good                6               Good  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "72515ba2",
    "metadata": {},
    "outputs": [
@@ -675,7 +675,7 @@
        "23462              0             Good               70           Moderate  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "161a6f6f",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "325ba67f",
    "metadata": {},
    "outputs": [
@@ -845,7 +845,7 @@
        "max         500.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,12 +875,15 @@
     "3. **Filter invalid values**  \n",
     "   - Ensured all pollutant columns have values **greater than 0** (to avoid meaningless or corrupted data).  \n",
     "\n",
+    "4. **Duplicate Check**\n",
+    "   - To ensure data integrity, a check was performed to verify if any **city** appeared in multiple records.\n",
+    "\n",
     "✅ After these steps, the dataset is clean, standardized, and ready for SQL import, analysis, and visualization.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "4b57e38a",
    "metadata": {},
    "outputs": [
@@ -975,7 +978,7 @@
        "[23463 rows x 1 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "e3f0129f",
    "metadata": {},
    "outputs": [
@@ -1001,7 +1004,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "2dff990e",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "38de22d4",
    "metadata": {},
    "outputs": [],
@@ -1053,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "ba079a04",
    "metadata": {},
    "outputs": [
@@ -1078,24 +1081,13 @@
     }
    ],
    "source": [
-    "print(df.isna().sum()) "
+    "print(df.isna().sum()) #check again number null of each columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d986a3d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cols = ['aqi_value', 'co_aqi_value', 'no2_aqi_value', 'ozone_aqi_value', 'pm2.5_aqi_value']\n",
-    "df = df[(df[cols] >= 0).all(axis=1)]        #check value must be larger 0 (value > 0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "0969f48a",
    "metadata": {},
    "outputs": [
     {
@@ -1108,12 +1100,37 @@
     }
    ],
    "source": [
+    "cols = ['aqi_value', 'co_aqi_value', 'no2_aqi_value', 'ozone_aqi_value', 'pm2.5_aqi_value']\n",
+    "df = df[(df[cols] >= 0).all(axis=1)]  \n",
+    "    #check value must be larger 0 (value > 0)\n",
     "initial_rows = len(df)\n",
     "df_cvalid = df[(df[cols] >= 0).all(axis=1)]\n",
     "final_rows = len(df_cvalid)\n",
-    "\n",
+    "    # Print valid and invalid rows based on the condition above\n",
     "print(\"Invalid rows:\", initial_rows - final_rows)\n",
-    "print(\"Valid rows:\", final_rows)\n"
+    "print(\"Valid rows:\", final_rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f9bfe200",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series([], Name: count, dtype: int64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the number of unique cities\n",
+    "city_counts = df['city_name'].value_counts()\n",
+    "\n",
+    "duplicates = city_counts[city_counts > 1]\n",
+    "print(duplicates)\n"
    ]
   },
   {
