--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -18,55 +18,88 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f35a08f",
+   "id": "3f222165",
    "metadata": {},
    "source": [
-    "## 📦 Import Libraries\n",
+    "## 🔧 Install the required packages\n",
     "\n",
-    "In this section, we import all necessary libraries for:\n",
-    "- Data manipulation (`pandas`, `numpy`)\n",
-    "- Visualization (`matplotlib`, `seaborn`)\n",
-    "- Database connection (`psycopg2`, `sqlalchemy`)\n",
-    "- File handling (`openpyxl`, `requests`)\n",
-    "- (Optional) Machine learning for prediction tasks (`scikit-learn`)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32ddbbab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install requests \n",
-    "%pip install pandas\n",
-    "%pip install numpy\n",
-    "%pip install seaborn\n",
-    "%pip install matplotlib\n",
-    "%pip install psycopg2 \n",
-    "%pip install sqlalchemy\n",
-    "%pip install openpyxl\n",
-    "%pip install -U scikit-learn\n"
+    "Before running the notebook, ensure you have installed the required packages:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "69786b16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\n",
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.3\n",
+      "[notice] To update, run: C:\\Users\\HP\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f35a08f",
+   "metadata": {},
+   "source": [
+    "## 📦 Import Libraries\n",
+    "\n",
+    "In this project, we use Python libraries for different tasks:\n",
+    "\n",
+    "### Core Libraries\n",
+    "- **Data manipulation:** `pandas`\n",
+    "- **Database connection:** `sqlalchemy`\n",
+    "- **Excel file handling:** `openpyxl`\n",
+    "\n",
+    "### Optional Libraries\n",
+    "- **Numerical operations:** `numpy`\n",
+    "- **Visualization:** `matplotlib`, `seaborn`\n",
+    "- **Machine learning / prediction tasks:** `scikit-learn`\n",
+    "- **Direct PostgreSQL connection (optional):** `psycopg2`\n",
+    "- **API / HTTP requests (optional):** `requests`\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "85874c2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import all libraries\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
+    "from sqlalchemy import create_engine # type: ignore\n",
+    "\n",
+    "\n",
+    "#Optional Libraries Import\n",
+    "\"\"\"\"\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import sklearn\n",
     "\n",
-    "# sklearn\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "    from sklearn.model_selection import train_test_split\n",
+    "    from sklearn.linear_model import LinearRegression\n",
+    "    from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "    from sklearn.preprocessing import StandardScaler\n",
+    "\"\"\"\n",
     "\n"
    ]
   },
@@ -86,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "603f7fe3",
    "metadata": {},
    "outputs": [
@@ -138,10 +171,9 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "\n",
     "df = pd.read_csv(\"../data/global_air_pollution_data.csv\")  #use pandas to read file csv and change to \"df\"\n",
-    "print(df)                                          #print data \"df\"\n"
+    "print(df)                                                  #print data \"df\"\n"
    ]
   },
   {
@@ -954,10 +986,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "293075a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf\u001b[49m.to_excel(\u001b[33m\"\u001b[39m\u001b[33mclean_air_quality.xlsx\u001b[39m\u001b[33m\"\u001b[39m, index=\u001b[38;5;28;01mFalse\u001b[39;00m) \n",
+      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df.to_excel(\"clean_air_quality.xlsx\", index=False) "
    ]
@@ -980,7 +1024,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import create_engine # type: ignore\n",
     "\n",
     "engine = create_engine(\"postgresql+psycopg2://postgres:potyla643125@localhost:5432/airquality_db\")\n",
     "\n",
